update navbar background and site background

--- a/AffirmationsApp/wwwroot/css/site.css
+++ b/AffirmationsApp/wwwroot/css/site.css
@@ -1,5 +1,17 @@
+#main-navbar {
+    background-color: #F8A8C0 !important;
+}
+
+#navbar-logo {
+    max-width: 50px;
+}
+
+#bodyka {
+    background-color: #F8B8A8 !important;
+}
+
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
