--- a/AffirmationsApp/Views/Shared/_Layout.cshtml
+++ b/AffirmationsApp/Views/Shared/_Layout.cshtml
@@ -25,19 +25,19 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Affirmations" asp-action="Index">Discovery</a>
+                            <a class="nav-link" asp-area="" asp-controller="Affirmations" asp-action="Index">Discovery</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Affirmations" asp-action="UserAffirmations">My Affirmations</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Profile</a>
-                        </li>
+                        @* <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Affirmations" asp-action="UserAffirmations">My Affirmations</a>
+                        </li> *@
+                        @* <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Profile</a>
+                        </li> *@
                     </ul>
-                    <partial name="_LoginPartial" />
+                    @* <partial name="_LoginPartial" /> *@
                 </div>
             </div>
         </nav>
