--- a/AffirmationsApp/wwwroot/css/bootswatch_minty.css
+++ b/AffirmationsApp/wwwroot/css/bootswatch_minty.css
@@ -4506,7 +4506,7 @@ textarea.form-control-lg {
     line-height: 1;
     color: var(--bs-navbar-color);
     background-color: transparent;
-    border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
+    border: none;
     border-radius: var(--bs-navbar-toggler-border-radius);
     transition: var(--bs-navbar-toggler-transition);
 }
@@ -4523,8 +4523,7 @@ textarea.form-control-lg {
 
 .navbar-toggler:focus {
     text-decoration: none;
-    outline: 0;
-    box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width);
+    outline: none;
 }
 
 .navbar-toggler-icon {
