add dynamic active setting for nav-links

--- a/AffirmationsApp/Views/Shared/_Layout.cshtml
+++ b/AffirmationsApp/Views/Shared/_Layout.cshtml
@@ -23,16 +23,16 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">
+                            <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "Home" && ViewContext.RouteData.Values["action"]?.ToString() == "Index" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Index">
                                 Home
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "Home" && ViewContext.RouteData.Values["action"]?.ToString() == "Privacy" ? "active" : "")" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Affirmations" asp-action="Index">Discovery</a>
+                            <a class="nav-link @(ViewContext.RouteData.Values["controller"]?.ToString() == "Affirmations" && ViewContext.RouteData.Values["action"]?.ToString() == "Index" ? "active" : "")" asp-area="" asp-controller="Affirmations" asp-action="Index">Discovery</a>
                         </li>
                         @* <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Affirmations" asp-action="UserAffirmations">My Affirmations</a>
