--- a/AffirmationsApp/Views/Home/Index.cshtml
+++ b/AffirmationsApp/Views/Home/Index.cshtml
@@ -1,29 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
-	var affirmations = new List<string>
-	{
-		"Minden nap egyre jobban érzem magam.",
-		"Képes vagyok bármire, amire csak vágyom.",
-		"Megérdemlem a boldogságot és a sikert.",
-		"Büszke vagyok arra, aki vagyok.",
-		"Minden kihívás egy új lehetőség számomra."
-	};
-	var message = "Hálás vagyok, hogy itt vagy. Nézz körbe, találd meg a téged hívó megerősítéseket, és tedd őket a sajátodévá. Ha pedig nem találsz ilyet, akkor írj egyet! :)";
-	var message2 = "Ha nem tudod mivel indulj, ajánlom figyelmedbe ezt a pár erőteljes megerősítést:";
+    ViewData["Title"] = "Home";
 	var isLoggedIn = User.Identity.IsAuthenticated;
 }
 
 <div class="text-center">
-    <h1 class="display-4">Üdvözöllek</h1>
-	<p>@message</p>
-	<p>@message2</p>
-	<ul>
-		@foreach (var affirmation in affirmations)
-		{
-			<li>@affirmation</li>
-		}
-	</ul>
-    
+	@* These texts will come from the database later on. *@
+	<h1 class="display-4 text-secondary pb-3">De jó, hogy itt vagy!&#129655;</h1>
+	<p class="text-secondary-emphasis">Nézz körbe! Találd meg a téged hívó megerősítéseket, és tedd őket a sajátodévá.<br>Vedd fel őket a SAJÁT HANGODON, vagy írj újat! Olyat, amire épp NEKED szükséged van.</p>
+	<h4 class="text-secondary-emphasis pt-3">Mai megerősítés</h4>
+	<h2 class="text-primary">A szívem tele van szeretettel.</h2>    
 
 	@if (isLoggedIn)
 	{
@@ -34,6 +19,4 @@
 		<p>Az app használatához kérlek jelentkezz be:</p>
 		<p>Ide jöhet a login</p>
 	}
-
-	<p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
