--- a/AffirmationsApp/wwwroot/css/bootswatch_minty.css
+++ b/AffirmationsApp/wwwroot/css/bootswatch_minty.css
@@ -89,8 +89,8 @@
     --bs-body-line-height: 1.5;
     --bs-body-color: #888;
     --bs-body-color-rgb: 136, 136, 136;
-    --bs-body-bg: #fff9de;
-    --bs-body-bg-rgb: 255, 249, 222;
+    --bs-body-bg: #fcfbf2;
+    --bs-body-bg-rgb: 252, 251, 242;
     --bs-emphasis-color: #000;
     --bs-emphasis-color-rgb: 0, 0, 0;
     --bs-secondary-color: rgba(136, 136, 136, 0.75);
