--- a/AffirmationsApp/Views/Shared/_Layout.cshtml
+++ b/AffirmationsApp/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Profile</a>
                         </li> *@
                     </ul>
-                    @* <partial name="_LoginPartial" /> *@
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
