--- a/AffirmationsApp/Views/Home/Index.cshtml
+++ b/AffirmationsApp/Views/Home/Index.cshtml
@@ -17,6 +17,6 @@
 	else
 	{
 		<p class="text-secondary-emphasis pt-3">Az app használatához kérlek jelentkezz be:</p>
-		<p class="text-secondary-emphasis">[Ide jöhet a login]</p>
+		<partial name="_AuthLinksPartial" />
 	}
 </div>
