add flicker of an idea to Home page

--- a/AffirmationsApp/Views/Home/Index.cshtml
+++ b/AffirmationsApp/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 
 	@if (isLoggedIn)
 	{
-		<p>Bejelentkezve mint: @User.Identity.Name</p>
+		<p>Ki kéne találni, hogy milyen lesz a Home page, ha belogolt a user. Legyenek itt az affirmationsjei?</p>
 	}
 	else
 	{
