--- a/AffirmationsApp/Views/Shared/_LoginPartial.cshtml
+++ b/AffirmationsApp/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button type="submit" class="nav-link @(ViewContext.RouteData.Values["page"]?.ToString() == "/Account/Manage/Index" ? "active" : "")">Logout</button>
         </form>
     </li>
 }
