--- a/AffirmationsApp/Views/Shared/_Layout.cshtml
+++ b/AffirmationsApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
+﻿@using AffirmationsApp.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<AffirmationsAppUser> SignInManager
 
 <!DOCTYPE html>
 <html lang="en">
