--- a/AffirmationsApp/Views/Shared/_LoginPartial.cshtml
+++ b/AffirmationsApp/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using AffirmationsApp.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<AffirmationsAppUser> SignInManager
+@inject UserManager<AffirmationsAppUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
