--- a/AffirmationsApp/Views/Shared/_Layout.cshtml
+++ b/AffirmationsApp/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/css/bootswatch_minty.css" />   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
@@ -54,7 +54,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3 pt-5">
+        <main role="main" class="pb-3 pt-5 flex-fill">
             @RenderBody()
         </main>
     </div>
