add profile photo handling

--- a/AffirmationsApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AffirmationsApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-
 <div class="row">
     <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
             <h2>Create a new account.</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>            
@@ -34,11 +32,6 @@
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhotoURL" class="form-control" aria-required="false" placeholder="Photo URL" />
-                <label asp-for="Input.PhotoURL">Photo URL PLACEHOLDER</label>
-                <span asp-validation-for="Input.PhotoURL" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.Password">Password</label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
@@ -47,6 +40,11 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="mb-4">
+                <label asp-for="Input.Photo" class="form-label">Profile Photo</label>
+                <input asp-for="Input.Photo" type="file" class="form-control" accept="image/*" aria-required="false" />
+                <span asp-validation-for="Input.Photo" class="text-danger"></span>
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary mb-5">Register</button>
         </form>
